<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <ImageView
        android:foreground="@drawable/design_foreground"
        android:id="@+id/imageReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/bg4"
        android:scaleType="centerCrop"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="46sp" />

    <TextView
        android:id="@+id/textSubSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="7dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_mail_24"
        android:drawablePadding="7dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="7dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:elevation="30dp"
        android:background="@drawable/design_button"
        android:fontFamily="@font/allerta"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="80dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/already_registered"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>