<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashScreenActivity">

    <ImageView
        android:foreground="@drawable/design_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/bg2"
        android:scaleType="centerCrop"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="46sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="@string/dream_food"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:elevation="30dp"
        android:background="@drawable/design_button"
        android:fontFamily="@font/allerta"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="70dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</FrameLayout>