<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewDaily"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/dinner"
        android:importantForAccessibility="no"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        android:foreground="@drawable/design_foreground_daily_meal"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="30dp"/>

</FrameLayout>