<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/table_fon"
    tools:context=".ui.myCart.MyCardFragment">

    <TextView
        android:text="@string/my_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/red"
        android:layout_marginTop="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_card_rec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/red"
        android:layout_gravity="bottom"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/white"
        android:layout_gravity="bottom"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_180"
        android:textColor="@color/white"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:elevation="30dp"
        android:background="@drawable/design_button"
        android:fontFamily="@font/allerta"
        android:text="@string/make_order"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

</FrameLayout>