<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:id="@+id/cardVerView"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="15dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ver_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/dinner" />

        <FrameLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:background="@color/dark_white"
            android:layout_gravity="bottom">
            
            <TextView
                android:id="@+id/ver_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ratingbar"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_0"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="12dp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/baseline_timelapse_24"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_00_23_00"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="42dp"
                android:layout_marginStart="40dp"

                />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_35"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="30dp" />

        </FrameLayout>

    </FrameLayout>



</androidx.cardview.widget.CardView>